--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,5 +1,5 @@
 @online{econotag,
-  author = {Redwire, LLC},
+  author = "{Redwire, LLC}",
   title = {Econotag: mc13224v development board with on-board debugging},
   month = may,
   year = {2013},
@@ -7,7 +7,7 @@
 }
 
 @online{mc1322x,
-  author = {Freescale Semiconductor},
+  author = "{Freescale Semiconductor}",
   title = {MC1322x - Advanced ZigBee™ - Compliant Platform-in-Package (PiP) for the 2.4 GHz IEEE® 802.15.4 Standard},
   month = may,
   year = {2013},
@@ -15,7 +15,7 @@
 }
 
 @online{contiki,
-  author = {Contiki-Community},
+  author = "{Contiki-Community}",
   title = {Contiki - The Open Source OS for the Internet of Things},
   month = may,
   year = {2013},
@@ -23,15 +23,16 @@
 }
 
 @online{erbium,
-  author = {Matthias Kovatsch, ETH Zürich},
+  author = "Matthias Kovatsch",
   title = {Erbium (Er) REST Engine and CoAP Implementation for Contiki},
+  organization="ETH Zurich",
   month = may,
   year = {2013},
   url = {http://people.inf.ethz.ch/mkovatsc/erbium.php}
 }
 
 @online{libcoap,
-  author = {Olaf Bergmann},
+  author = "Olaf Bergmann",
   title = {libcoap: C-Implementation of CoAP },
   month = may,
   year = {2013},
@@ -39,7 +40,7 @@
 }
 
 @online{tlsparams,
-  author="Internet Assigned Numbers Authority (IANA)",
+  author="{Internet Assigned Numbers Authority (IANA)}",
   title="{Transport Layer Security (TLS) Parameters}",
   year=2013,
   month=jul,
@@ -47,7 +48,7 @@
 }
 
 @online{portnumbers,
-  author="Internet Assigned Numbers Authority (IANA)",
+  author="{Internet Assigned Numbers Authority (IANA)}",
   title="{Service Name and Transport Protocol Port Number Registry}",
   year=2013,
   month=aug,
@@ -55,7 +56,7 @@
 }
 
 @misc{ieee802154,
-  author="LAN/MAN Standards Committee and IEEE Computer Society",
+  author="{LAN/MAN Standards Committee and IEEE Computer Society}",
   title="{Low-Rate Wireless Personal Area Networks (LR-WPANs)}",
   series="IEEE Standard for Local and metropolitan area networks",
   number="802.15.4",
@@ -68,7 +69,7 @@
 }
 
 @misc{rfc3610,
-  author="D. Whiting, Hifn and R. Housley, Vigil Security and N. Ferguson, MacFergus",
+  author="D. Whiting and R. Housley and N. Ferguson",
   title="{Counter with CBC-MAC (CCM)}",
   series="Request for Comments",
   number="3610",
@@ -81,7 +82,7 @@
 }
 
 @misc{nsp3610,
-  author="National Institute of Standards and Technology (NIST)",
+  author="{National Institute of Standards and Technology (NIST)}",
   title="{Recommendation for Block Cipher Modes of Operation: The CCM Mode for Authentication and Confidentiality}",
   series="NIST Sepcial Publication",
   number="800-38C",
@@ -94,7 +95,7 @@
 }
 
 @misc{rfc4279,
-  author="P. Eronen, Nokia and H. Tschofenig, Siemens",
+  author="P. Eronen and H. Tschofenig",
   title="{Pre-Shared Key Ciphersuites for Transport Layer Security (TLS)}",
   series="Request for Comments",
   number="4279",
@@ -107,7 +108,7 @@
 }
 
 @misc{rfc4492,
-  author="S. Blake-Wilson, SafeNet and N. Bolyard, Sun Microsystems and V. Gupta, Sun Labs and C. Hawk, Corriente and B. Moeller, Ruhr-Uni Bochum",
+  author="S. Blake-Wilson and N. Bolyard and V. Gupta and C. Hawk and B. Moeller",
   title="{Elliptic Curve Cryptography (ECC) Cipher Suites for Transport Layer Security (TLS)}",
   series="Request for Comments",
   number="4492",
@@ -146,7 +147,7 @@
 }
 
 @misc{rfc6347,
-  author="E. Rescorla, RTFM Inc. and N. Modadugu, Google Inc.",
+  author="E. Rescorla and N. Modadugu",
   title="{Datagram Transport Layer Security Version 1.2}",
   series="Request for Comments",
   number="6347",
@@ -159,7 +160,7 @@
 }
 
 @misc{rfc6655,
-  author="D. McGrew and D. Bailey, RSA Security Division of EMC",
+  author="D. McGrew and D. Bailey",
   title="{AES-CCM Cipher Suites for Transport Layer Security (TLS)}",
   series="Request for Comments",
   number="6655",
@@ -185,7 +186,7 @@
 }
 
 @misc{draftaesecc,
-  author="D. McGrew and D. Bailey, RSA/EMC and M. Campagna, Certicom Corp and R. Dugal, Certicom Corp",
+  author="D. McGrew and D. Bailey and M. Campagna and R. Dugal",
   title="{AES-CCM ECC Cipher Suites for TLS}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -197,7 +198,7 @@
 }
 
 @misc{draftcoap,
-  author="Z. Shelby and K. Hartke, Universitaet Bremen TZI and C. Bormann, Universitaet Bremen TZI",
+  author="Z. Shelby and K. Hartke and C. Bormann",
   title="{Constrained Application Protocol (CoAP)}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -209,7 +210,7 @@
 }
 
 @misc{draftcoapblock,
-  author="C. Bormann, Universitaet Bremen TZI and Z. Shelby",
+  author="C. Bormann and Z. Shelby",
   title="{Blockwise transfers in CoAP}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -221,7 +222,7 @@
 }
 
 @misc{draftcodtls,
-  author="K. Hartke, Universitaet Bremen TZI and O. Bergmann, Universitaet Bremen TZI",
+  author="K. Hartke and O. Bergmann",
   title="{Datagram Transport Layer Security in Constrained Environments}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -233,7 +234,7 @@
 }
 
 @misc{draftmintls,
-  author="H. Tschofenig, Nokia Siemens Networks and S.S. Kumar, Philips Research and S. Keoh, Philips Research",
+  author="H. Tschofenig and S.S. Kumar and S. Keoh",
   title="{A Hitchhiker's Guide to the (Datagram) Transport Layer Security Protocol for Smart Objects and Constrained Node Networks}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
