--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -33,7 +33,7 @@
 
 \date[08.2013]%short
 {{Kolloquium der AG Rechnernetze\\
-09.08.2013}}%long
+30.09.2013}}%long
 
 \begin{document}
 
@@ -46,32 +46,51 @@
 \begin{frame}{Gliederung}
   \begin{itemize}
     \item Motivation
-    \begin{itemize}
-     \item Ausgewählte DTLS-Header
-    \end{itemize}
+    \item Hardware \& Umgebung
+    \item DTLS
+      \begin{itemize}
+        \item Ausgewählte DTLS-Header
+        \item Handshake
+      \end{itemize}
     \item Mögliche Lösungen
     \begin{itemize}
-      \item Handshake über CoAP
       \item Stateless Header Compression
+      \item Handshake über CoAP
     \end{itemize}
-    \item Hardware
     \item Geeignetes Ciphersuit
   \end{itemize}
-
 \end{frame}
 
 \begin{frame}{Motivation}
   \begin{itemize}
-    \item Sicherheit ist auch in eingeschränkten Umgebungen notwendig
+    \item Projekt GOBI: Mikro-DTLS (eher Mikro-Sicherheit)
+    \item Sicherheit ist auch in eingeschränkten \newline Umgebungen notwendig
     \item TLS und DTLS sind bewährte Standards
     \item DTLS komplexer als TLS
     \item Problematisch in eingeschränkten Umgebungen
-    \item 13 Byte Header bei 127 Byte Payload in 6LoWPAN
-    \item Hoher Aufwand während des Handshakes
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Motivation}{Ausgewählte DTLS-Header}
+\begin{frame}{Hardware \& Umgebung}
+  \begin{itemize}
+    \item Econotag: mc13224v Development-Board
+    \begin{itemize}
+      \item Freescale MC13224v ARM7TDMI-S Microcontroller
+      \item IEEE 802.15.4 Funkstandard
+      \item AES Hardware-Engine
+      \item 128 KiB Flash-Speicher
+      \item 96 KiB RAM
+    \end{itemize}
+    \item IEEE 802.15.4 MTU: 127 Byte
+    \begin{itemize}
+      \item - 48 Byte 6LoWPAN-Header
+      \item - 8 Byte UDP-Header
+      \item = 71 Byte Nutzdaten
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{DTLS}{Ausgewählte DTLS-Header}
   \begin{columns}
     \column{.5\textwidth}
       struct \{\\
@@ -81,7 +100,9 @@
       \qquad \textcolor{blue}{uint48 sequence\_number;}\\
       \qquad uint16 length;\\
       \qquad uint8 ~~fragment[length];\\
-      \} DTLS\_Record;
+      \} DTLS\_Record;\\
+      ~\\
+      = 13 Byte
     \column{.5\textwidth}
       struct \{\\
       \qquad HandshakeType msg\_type;\\
@@ -90,8 +111,33 @@
       \qquad \textcolor{blue}{uint24 fragment\_offset;}\\
       \qquad \textcolor{blue}{uint24 fragment\_length;}\\
       \qquad uint8 ~~fragment[length];\\
-      \} Handshake;
+      \} Handshake;\\
+      ~\\
+      = 12 Byte
   \end{columns}
+\end{frame}
+
+\begin{frame}{DTLS}{Handshake}
+  \begin{scriptsize}
+  \tt ~~~~~~~~~~~~~~~~Client~~~~~~~~~~~~~Server\\
+  \tt ~~~~~~~~~~~~~~~~---------~~~~~~~~~~~~~---------\\
+  \tt ~~~~~~~~~~~ClientHello~~--0-->\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--0--~~HelloVerifyRequest~($ \supset $~cookie)\\
+  \tt ClientHello~(+~cookie)~~--1-->\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--1--~~ServerHello\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--2--~*Certificate\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--3--~*ServerKeyExchange\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--4--~*CertificateRequest\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--5--~~ServerHelloDone\\
+  \tt ~~~~~~~~~~~Certificate*~--2-->\\
+  \tt ~~~~~ClientKeyExchange~~--3-->\\
+  \tt ~~~~~CertificateVerify*~--4-->\\
+  \tt ~~~~[ChangeCipherSpec]~~--5-->\\
+  \tt ~~~~~~~~~~~~~~Finished~~--6-->\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--6--~~[ChangeCipherSpec]\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<--7--~~Finished\\
+  \tt ~~~~~~Application~Data~~<----------->~~Application~Data
+  \end{scriptsize}
 \end{frame}
 
 \begin{frame}{Mögliche Lösungen}
@@ -114,7 +160,7 @@
   \tt ~~~~~~~~~~~~~~~~~<---- 2.01 Created\\
   \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~ServerHello (S=X)\\
   \tt ~~~~~~~~~~~~~~~~~~~~~~~~~*Certificate\\
-  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~ServerKeyExchange\\
+  \tt ~~~~~~~~~~~~~~~~~~~~~~~~~*ServerKeyExchange\\
   \tt ~~~~~~~~~~~~~~~~~~~~~~~~~*CertificateRequest\\
   \tt ~~~~~~~~~~~~~~~~~~~~~~~~~~ServerHelloDone
 \end{frame}
@@ -145,7 +191,9 @@
       \qquad SequenceNumber snr:3;\\
       \qquad RecordLength length:2;\\
       \qquad uint8 ~~payload[0];\\
-      \} DTLSRecord\_t;
+      \} DTLSRecord\_t;\\
+      ~\\
+      = 2 - 15 Byte
     \column{.5\textwidth}
       struct \{\\
       \qquad ContentType type:6;\\
@@ -156,41 +204,25 @@
       ~\\
       ~\\
       ~\\
-      ~
+      ~\\
+      ~\\
+      = 1 - 3 Byte
   \end{columns}
-\end{frame}
-
-\begin{frame}{Hardware}
-  \begin{itemize}
-    \item Econotag: mc13224v Development-Board
-    \begin{itemize}
-      \item Freescale MC13224v ARM7TDMI-S Microcontroller
-      \item 802.15.4 Funkstandard
-      \item AES Hardware-Engine
-      \item 128 KiB Flash-Speicher
-      \item 96 KiB RAM
-    \end{itemize}
-  \end{itemize}
 \end{frame}
 
 \begin{frame}{Geeignetes Ciphersuit}
   \begin{itemize}
     \item TLS\_PSK\_ECDH\_WITH\_AES\_128\_CCM\_8
   \end{itemize}
-  Bei Speichermangel:
+  Eigenschaften:
   \begin{itemize}
-    \item TLS\_PSK\_WITH\_AES\_128\_CCM\_8
+    \item Durch CCM wird keine Hash-Funktion \newline für den MAC benötigt
+    \item Durch den Einsatz von CBC-MAC mit PSK kann \newline auf HMAC mit SHA-256 verzichtet werden
   \end{itemize}
-  Für beide gilt:
+  Auswirkungen auf die Programmgröße:
   \begin{itemize}
-    \item Verzicht auf HMAC mit SHA-256
-    \item Nutzung von CBC-MAC
-  \end{itemize}
-  Größe des Binärcodes:
-  \begin{itemize}
-    \item Nutzung der AES-Hardware für CCM: 628 Byte
-    \item Einsparung durch AES in Hardware: 7KiB
-    \item Für HMAC und ECC jeweils knapp 3KiB
+    \item Einsparung durch AES in Hardware: \textasciitilde 1.5KiB
+    \item Einsparung durch CBC-MAC mit PSK: \textasciitilde 1.5KiB
   \end{itemize}
 \end{frame}
 
