--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -41,7 +41,7 @@
 
 \newacronym{acr:sha}{SHA}{Secure Hash Algorithm}
 
-\newacronym{acr:psr}{PSR}{Pseudo-Random-Funktion}
+\newacronym{acr:prf}{PRF}{Pseudo-Random-Funktion}
 
 \newacronym{acr:hmac}{HMAC}{Keyed-Hashing for Message Authentication}
 
@@ -50,6 +50,10 @@
 \newacronym{acr:ctr}{CTR}{Counter}
 
 \newacronym{acr:cbc}{CBC}{Cipher Block Chain}
+
+\newacronym{acr:pin}{PIN}{Persönliche Identifikationsnummer}
+
+\newacronym{acr:uuid}{UUID}{Universally Unique Identifier}
 
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
