--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -55,6 +55,14 @@
   url="http://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml",
 }
 
+@online{doxygen,
+  author="Dimitri van Heesch",
+  title="{Doxygen}",
+  year=2013,
+  month=aug,
+  url="http://www.stack.nl/~dimitri/doxygen",
+}
+
 @misc{ieee802154,
   author="{LAN/MAN Standards Committee and IEEE Computer Society}",
   title="{Low-Rate Wireless Personal Area Networks (LR-WPANs)}",
