--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -26,6 +26,11 @@
   description={Asymmetrisches kryptographisches Verfahren zur Verschlüsselung und Signatur, das nach seinen Erfindern Rivest, Shamir und Adleman benannt ist}
 }
 
+\newglossaryentry{glos:mitma}{
+  name={Man-in-the-middle-Angriff},
+  description={Angriff auf eine Kommunikationsverbindung zwischen zwei Parteien, bei dem ein Angreifer die vollständige Kontrolle über den Datenverkehr der Verbindung übernimmt}
+}
+
 % \newglossaryentry{label}{
 %   name={name},
 %   description={long description}
