Report an CMAC angepasst

--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -55,6 +55,8 @@
 
 \newacronym{acr:uuid}{UUID}{Universally Unique Identifier}
 
+\newacronym{acr:cmac}{CMAC}{Cipher-based Message Authentication Code}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
