--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -128,6 +128,19 @@
   url="http://tools.ietf.org/html/rfc4492",
 }
 
+@misc{rfc4493,
+  author="JH. Song and R. Poovendran and J. Lee and T. Iwata",
+  title="{The AES-CMAC Algorithm}",
+  series="Request for Comments",
+  number="4493",
+  howpublished="RFC 4493 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2006,
+  month=jun,
+  url="http://tools.ietf.org/html/rfc4493",
+}
+
 @misc{rfc5116,
   author="D. McGrew",
   title="{An Interface and Algorithms for Authenticated Encryption}",
