--- a/report/abbreviations.de.tex
+++ b/report/abbreviations.de.tex
@@ -5,7 +5,7 @@
 \def\advisorname{Betreuer}
 \def\matriculationname{Matrikel-Nr.}
 \def\contentsname{Inhalt}
-\def\abbreviationsname{Liste der Abkürzungen}
+\def\abbreviationsname{Akronyme}
 \def\glossaryname{Glossar}
 
 \maybespaceafter{zB}{z.\,B.}%
