--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -6,7 +6,7 @@
   url = {http://www.redwirellc.com/store/node/1}
 }
 
-@online{mc1322x,
+@online{mc1322,
   author = "{Freescale Semiconductor}",
   title = {MC1322x - Advanced ZigBee™ - Compliant Platform-in-Package (PiP) for the 2.4 GHz IEEE® 802.15.4 Standard},
   month = may,
@@ -218,16 +218,16 @@
   url="http://tools.ietf.org/html/draft-mcgrew-tls-aes-ccm-ecc-06",
 }
 
-@misc{draftcoap,
-  author="Z. Shelby and K. Hartke and C. Bormann",
+@misc{draftcoap13,
+  author="Z. Shelby and K. Hartke and C. Bormann and B. Frank",
   title="{Constrained Application Protocol (CoAP)}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
   publisher="IETF",
   organization="Internet Engineering Task Force",
-  year=2013,
-  month=jun,
-  url="http://datatracker.ietf.org/doc/draft-ietf-core-coap",
+  year=2012,
+  month=dez,
+  url="http://tools.ietf.org/html/draft-ietf-core-coap-13",
 }
 
 @misc{draftcoapblock,
