--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -31,6 +31,11 @@
   description={Angriff auf eine Kommunikationsverbindung zwischen zwei Parteien, bei dem ein Angreifer die vollständige Kontrolle über den Datenverkehr der Verbindung übernimmt}
 }
 
+\newglossaryentry{glos:mc1322}{
+  name={MC13224v},
+  description={ARM7TDMI-S Microcontroller der Firma Freescale Semiconductor, Inc}
+}
+
 % \newglossaryentry{label}{
 %   name={name},
 %   description={long description}
