--- a/report/report.tex
+++ b/report/report.tex
@@ -49,9 +49,9 @@
 \clearpage
 \input{chapters/abstract.tex}
 
-\frontmatter
-\phantomsection
-\addcontentsline{toc}{section}{\contentsname}
+%\frontmatter
+%\phantomsection
+%\addcontentsline{toc}{section}{\contentsname}
 \tableofcontents
 
 \clearpage
