--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -63,6 +63,22 @@
   url="http://www.stack.nl/~dimitri/doxygen",
 }
 
+@online{eccori,
+  author="Chris K Cockrum",
+  title="{Implementation of an Elliptic Curve Cryptosystem on an 8-bit Microcontroller}",
+  year=2009,
+  month=apr,
+  url="http://cockrum.net/Implementation_of_ECC_on_an_8-bit_microcontroller.pdf",
+}
+
+@online{armasm,
+  author="Harald Kipp and Sven Köhler",
+  title="{ARM GCC Inline Assembler Cookbook}",
+  year=2013,
+  month=aug,
+  url="http://www.ethernut.de/en/documents/arm-inline-asm.html",
+}
+
 @misc{ieee802154,
   author="{LAN/MAN Standards Committee and IEEE Computer Society}",
   title="{Low-Rate Wireless Personal Area Networks (LR-WPANs)}",
@@ -269,7 +285,3 @@
 CCM von NIST -> http://csrc.nist.gov/publications/nistpubs/800-38C/SP800-38C.pdf
 
 CCM Sicher ? -> http://csrc.nist.gov/groups/ST/toolkit/BCM/documents/proposedmodes/ccm/ccm-ad1.pdf
-
-http://cockrum.net/Implementation_of_ECC_on_an_8-bit_microcontroller.pdf
-
-http://www.ethernut.de/en/documents/arm-inline-asm.html
