--- a/kolloquien/2013_09_12.tex
+++ b/kolloquien/2013_09_12.tex
@@ -66,7 +66,7 @@
 
 \begin{frame}{Motivation}
   \begin{itemize}
-    \item Projekt GOBI
+    \item Bachelorprojekt GOBI
     \begin{itemize}
       \item Sicherheit ist auch in eingeschränkten \newline Umgebungen notwendig
       \item Mikro-DTLS (eher Mikro-Sicherheit)
