--- a/kolloquien/2013_09_12.tex
+++ b/kolloquien/2013_09_12.tex
@@ -219,7 +219,7 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Geeignete Ciphersuit}
+\begin{frame}{Geeignete Ciphersuite}
   \begin{itemize}
     \item TLS\_PSK\_ECDH\_WITH\_AES\_128\_CCM\_8
   \end{itemize}
