Session-ID ist nicht mehr statisch und wird nun zufällig generiert. Dopplung noch nicht ausgeschlossen. PSK generierung optimiert.

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -118,6 +118,19 @@
   url="http://csrc.nist.gov/publications/nistpubs/800-38C/SP800-38C.pdf",
 }
 
+@misc{rfc3986,
+  author="T. Berners-Lee, R. Fielding, L. Masinter",
+  title="{Uniform Resource Identifier (URI): Generic Syntax}",
+  series="Request for Comments",
+  number="3986",
+  howpublished="RFC 3986 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2005,
+  month=jan,
+  url="http://tools.ietf.org/html/rfc3986",
+}
+
 @misc{rfc4279,
   author="P. Eronen and H. Tschofenig",
   title="{Pre-Shared Key Ciphersuites for Transport Layer Security (TLS)}",
@@ -127,7 +140,7 @@
   publisher="IETF",
   organization="Internet Engineering Task Force",
   year=2005,
-  month=dez,
+  month=dec,
   url="http://tools.ietf.org/html/rfc4279",
 }
 
