--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -4,9 +4,9 @@
   description={Beschreibt die Aushandlung von Sicherheitsparametern um eine sichere Verbindung herzustellen}
 }
 
-\newglossaryentry{glos:ciphersuit}{
-  name={Ciphersuit},
-  plural={Ciphersuits},
+\newglossaryentry{glos:ciphersuite}{
+  name={Cipher-Suite},
+  plural={Cipher-Suites},
   description={Gruppe aus 4 Algorithmen, die für Schlüsselaustausch, Authentifizierung, Hash und Verschlüsselung verwendet werden}
 }
 
