--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -1,9 +1,9 @@
 
-\newacronym{acr:ssl}{SSL}{Secure Sockets Layer}
+\newacronym{acr:ssl}{SSL}{Secure Sockets Layer Protocol}
 
-\newacronym{acr:tls}{TLS}{Transport Layer Security}
+\newacronym{acr:tls}{TLS}{Transport Layer Security Protocol}
 
-\newacronym{acr:dtls}{DTLS}{Datagram Transport Layer Security}
+\newacronym{acr:dtls}{DTLS}{Datagram Transport Layer Security Protocol}
 
 \newacronym{acr:ietf}{IETF}{Internet Engineering Task Force}
 
