--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -57,6 +57,8 @@
 
 \newacronym{acr:cmac}{CMAC}{Cipher-based Message Authentication Code}
 
+\newacronym{acr:ipv6}{IPv6}{Internet Protocol, Version 6}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
