--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -92,6 +92,19 @@
   url="http://standards.ieee.org/getieee802/download/802.15.4-2011.pdf",
 }
 
+@misc{rfc2460,
+  author="S. Deering and R. Hinden",
+  title="{Internet Protocol, Version 6 (IPv6) Specification}",
+  series="Request for Comments",
+  number="2460",
+  howpublished="RFC 2460 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=dec,
+  url="http://tools.ietf.org/html/rfc2460",
+}
+
 @misc{rfc3610,
   author="D. Whiting and R. Housley and N. Ferguson",
   title="{Counter with CBC-MAC (CCM)}",
@@ -168,6 +181,19 @@
   year=2006,
   month=jun,
   url="http://tools.ietf.org/html/rfc4493",
+}
+
+@misc{rfc4944,
+  author="G. Montenegro and N. Kushalnagar and J. Hui and D. Culler",
+  title="{Transmission of IPv6 Packets over IEEE 802.15.4 Networks}",
+  series="Request for Comments",
+  number="4944",
+  howpublished="RFC 4944 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2007,
+  month=sep,
+  url="http://tools.ietf.org/html/rfc4944",
 }
 
 @misc{rfc5116,
