--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -31,7 +31,7 @@
 
 \newacronym{acr:aes}{AES}{Advanced Encryption Standard}
 
-\newacronym{acr:dos}{DoS}{Denial of Service}
+\newacronym{acr:dos}{DoS}{Denial-of-Service}
 
 \newacronym{acr:psk}{PSK}{Pre-Shared Key}
 
