--- a/report/appendices/index.tex
+++ b/report/appendices/index.tex
@@ -23,3 +23,5 @@
 \addcontentsline{toc}{chapter}{Abbildungsverzeichnis}
 \patchcmd{\listoffigures}{\section}{\chapter*}{}{}
 \listoffigures
+
+\input{appendices/cd.tex}
