--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -33,10 +33,18 @@
 
 @online{libcoap,
   author = "Olaf Bergmann",
-  title = {libcoap: C-Implementation of CoAP },
+  title = {libcoap: C-Implementation of CoAP},
   month = may,
   year = {2013},
   url = {http://libcoap.sourceforge.net}
+}
+
+@online{tinydtls,
+  author = "Olaf Bergmann",
+  title = {tinydtls  0.4.0},
+  month = oct,
+  year = {2013},
+  url = {http://tinydtls.sourceforge.net/}
 }
 
 @online{tlsparams,
