--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -47,6 +47,14 @@
   url = {http://tinydtls.sourceforge.net/}
 }
 
+@online{openssl,
+  author = "OpenSSL-Community",
+  title = {OpenSSL - Cryptography and SSL/TLS Toolkit},
+  month = oct,
+  year = {2013},
+  url = {http://www.openssl.org/}
+}
+
 @online{tlsparams,
   author="{Internet Assigned Numbers Authority (IANA)}",
   title="{Transport Layer Security (TLS) Parameters}",
