--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -31,6 +31,15 @@
   url = {http://people.inf.ethz.ch/mkovatsc/erbium.php}
 }
 
+@online{wireshark,
+  author = "Wireshark Foundation",
+  title = {Wireshark},
+  organization="ETH Zurich",
+  month = oct,
+  year = {2013},
+  url = {http://www.wireshark.org/}
+}
+
 @online{libcoap,
   author = "Olaf Bergmann",
   title = {libcoap: C-Implementation of CoAP},
@@ -53,6 +62,14 @@
   month = oct,
   year = {2013},
   url = {http://www.openssl.org/}
+}
+
+@online{libmc1322x,
+  author = "Mariano Alvira",
+  title = {Library code for the Freescale MC13224v ARM7 SoC with 802.15.4 radio},
+  month = oct,
+  year = {2013},
+  url = {https://github.com/malvira/libmc1322x}
 }
 
 @online{tlsparams,
