--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -354,6 +354,18 @@
   url="http://tools.ietf.org/html/draft-tschofenig-lwig-tls-minimal-03",
 }
 
+@misc{draftpractical,
+  author="K. Hartke",
+  title="{Practical Issues with Datagram Transport Layer Security in Constrained Environments}",
+  series="Request for Comments (work in progress)",
+  howpublished="Internet-Draft",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2013,
+  month=oct,
+  url="http://tools.ietf.org/html/draft-hartke-dice-practical-issues-00",
+}
+
 CCM von NIST -> http://csrc.nist.gov/publications/nistpubs/800-38C/SP800-38C.pdf
 
 CCM Sicher ? -> http://csrc.nist.gov/groups/ST/toolkit/BCM/documents/proposedmodes/ccm/ccm-ad1.pdf
