--- a/report/report.tex
+++ b/report/report.tex
@@ -15,9 +15,9 @@
 \input{settings.tex}
 
 % http://texfragen.de/hurenkinder_und_schusterjungen
-% \clubpenalty = 10000
-% \widowpenalty = 10000
-% \displaywidowpenalty = 10000
+\clubpenalty = 10000
+\widowpenalty = 10000
+\displaywidowpenalty = 10000
 
 \begin{document}
 
