--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -37,6 +37,11 @@
   description={ARM7TDMI-S Microcontroller der Firma Freescale Semiconductor, Inc}
 }
 
+\newglossaryentry{glos:gobi}{
+  name={GOBI},
+  description={Name eines studentischen Projekts an der Universität Bremen, das im Jahr 2012 als Bachelorprojekt begonnen hat und im Jahr 2013 als Masterprojekt forgesetzt wird}
+}
+
 % \newglossaryentry{label}{
 %   name={name},
 %   description={long description}
