--- a/report/settings.tex
+++ b/report/settings.tex
@@ -8,7 +8,7 @@
 \title{Anpassungen von DTLS zur sicheren Kommunikation in eingeschränkten Umgebungen}
 \subtitle{}
 
-\date{30.\,September 2013}
+\date{14.\,Oktober 2013}
 
 \institute{Universität Bremen}
 \department{Fachbereich 3: Mathematik und Informatik}
