--- a/report/appendices/cd.tex
+++ b/report/appendices/cd.tex
@@ -18,9 +18,9 @@ Im Folgenden werden die Ordner der CD, sowie deren Inhalte, in der obersten Eben
   \item \textbf{contiki}: SmartAppContiki mit zusätzlichen Apps, wie \acr{dtls}, \acr{ecc} und flash-store.
   \item \textbf{dokumente}: Einige in dieser Arbeit genutzte Dokumente und Software, inklusive Quellenangaben.
   \item \textbf{expose}: Exposé zur Bachelorarbeit.
-  \item \textbf{kolloquien}: Präsentationen der beiden Kolloquien in denen die Bachelorarbeit vorgestellt wurde.
+  \item \textbf{kolloquien}: Präsentationen der beiden Kolloquien, in denen die Bachelorarbeit vorgestellt wurde.
   \item \textbf{libmc1322x}: Bibliothek zur Nutzung des \glos{mc1322}, die in dieser Arbeit erweitert wurde.
-  \item \textbf{report}: Quellcode dieses Dokuments inklsive der erzeugten PDF-Datei.
+  \item \textbf{report}: Quellcode dieses Dokuments inklusive der erzeugten PDF-Datei.
   \item \textbf{server}: Server mit einigen Ressourcen, der auf Contiki basiert. Vorkonfiguriert mit der IP-Adresse aaaa::60b1:60b1:60b1:0019.
   \item \textbf{server-min}: Minimaler \acr{coap}-Server mit einer Ressource und dem unveränderten Contiki.
   \item \textbf{server-tiny}: \acr{dtls}-Server mit TinyDTLS. Zu groß für den \glos{mc1322}: aber notwendig für den Größenvergleich einiger Komponenten.
